--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,15 @@
 {
 	"short_name": "nextukge",
 	"name": "Next Election UK",
+	"description": "Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown",
+	"icons": [
+		{
+			"src": "icon.png",
+			"type": "image/png",
+			"sizes": "144x144",
+			"purpose": "any"
+		}
+	],
 	"start_url": ".",
 	"display": "standalone",
 	"theme_color": "#363636",
