--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "nextukge",
-	"name": "Next Election UK",
+	"name": "The Next Election UK",
 	"description": "Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown",
 	"icons": [
 		{
