--- a/package.json
+++ b/package.json
@@ -1,58 +1,52 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@fontsource/eb-garamond": "^4.5.11",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "serve-build": "^0.1.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
-  },
+  "name": "my-project",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "buildstart": "react-scripts build && serve-build"
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact build",
+    "serve": "sirv build --cors --single",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch",
+    "lint": "eslint src",
+    "test": "jest"
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "preact",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "ignorePatterns": [
+      "build/"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+  "dependencies": {
+    "@fontsource/eb-garamond": "^4.5.11",
+    "preact": "^10.10.0",
+    "preact-render-to-string": "^5.2.1",
+    "preact-router": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "cross-env": "^7.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-preact-pure": "^4.0.1",
+    "eslint": "^8.20.0",
+    "eslint-config-preact": "^1.3.0",
+    "jest": "^27.5.1",
+    "jest-preset-preact": "^4.0.5",
+    "preact-cli": "^3.4.0",
+    "sirv-cli": "^2.0.2",
+    "typescript": "^4.5.2"
+  },
+  "jest": {
+    "preset": "jest-preset-preact",
+    "setupFiles": [
+      "<rootDir>/tests/__mocks__/browserMocks.ts",
+      "<rootDir>/tests/__mocks__/setupTests.ts"
     ]
   }
 }
