Returned intended keeps from force rollback.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ name: Deploy Site
 on:
   push:
     branches: ["main"]
+    paths:
+      - "src/**"
+      - "package-lock.json"
+      - "tsconfig.json"
   workflow_dispatch:
 
 jobs:
