Remotely find the election date

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_ELECTION_DATE=2025-01-24
+VITE_ELECTION_DATA=https://gist.githubusercontent.com/soup-bowl/3e5ea9c306cc18af7c2c6765ed42e873/raw/tne-config.json
