--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.6",
     "@fontsource/eb-garamond": "^4.5.11",
+    "@fontsource/inter": "^5.0.8",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
