--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fontsource/inter": "^5.0.16",
     "preact": "^10.19.3",
     "vite": "^5.0.12",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.1",
