--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set Signature
-        run: echo "VITE_VER=$(git rev-parse --short HEAD)" >> .env
+        run: echo "VITE_VER=$(git rev-parse --short HEAD)" >> .env.production
 
       - name: 🏗 Setup Node.js
         uses: actions/setup-node@v4
