--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "dependencies": {
-    "@fontsource/eb-garamond": "^5.0.18",
-    "@fontsource/inter": "^5.0.18",
-    "preact": "^10.21.0",
-    "vite": "^5.2.10",
-    "vite-plugin-pwa": "^0.20.0",
-    "yaml": "^2.4.2"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.8.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.10"
-  },
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"dependencies": {
+		"@fontsource/eb-garamond": "^5.0.18",
+		"@fontsource/inter": "^5.0.18",
+		"preact": "^10.21.0",
+		"vite": "^5.2.10",
+		"vite-plugin-pwa": "^0.20.0",
+		"yaml": "^2.4.2"
+	},
+	"devDependencies": {
+		"@preact/preset-vite": "^2.8.2",
+		"prettier": "3.2.5",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.10"
+	},
+	"scripts": {
+		"start": "npm run dev",
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "prettier . --write"
+	}
 }
