--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.8.2",
+		"@typescript-eslint/eslint-plugin": "^7.10.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
 		"prettier": "3.2.5",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.10"
@@ -20,7 +24,8 @@
 		"start": "npm run dev",
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"lint": "prettier . --write"
+		"pretty": "prettier . --write"
 	}
 }
