--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@preact/preset-vite": "^2.8.2",
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
+		"colortranslator": "^4.1.0",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
