--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
     paths:
       - "src/**"
+      - "public/**"
       - "package-lock.json"
       - "tsconfig.json"
   workflow_dispatch:
