--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"pretty": "prettier . --write"
+		"format": "prettier . --write"
 	}
 }
