--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,12 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+    ignore:
+      # Issues with Vite
+      - dependency-name: "eslint"
+        versions: ["9"]
+      - dependency-name: "@typescript-eslint/eslint-plugin"
+        versions: ["8"]
     groups:
       dev-dependencies:
         patterns:
